# TokenDetectionAPI

./: LICENSE  Readme.md  main.py  pyproject.toml  requirements.txt
config/: config.yml
core/: __init__.py  image.py  parser.py  reader.py
src/: __init__.py  app.py  endpoints.py
static/: game.html  index.html
static/css/: game_ui.css
static/js/: game.js
utils/: __init__.py  exceptions.py  helpers.py  models.py  process.py  server.py
