[tool.poetry]
name = "Token-Detector"
version = "1.0.0"
description = "An API that detect discord Bot tokens from images"
authors = ["KortaPo"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
amogus = "^0.1"
PyYAML = "^6.0"
requests = "^2.27.1"
loguru = "^0.5.3"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
numpy = "^1.22.1"
opencv-python-headless = "4.5.4.60"
fastapi-limiter = {git = "https://github.com/long2ice/fastapi-limiter.git"}
pytesseract = "^0.3.8"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[tool.isort]
profile = "black"
py_version = 38
line_length = 100
combine_as_imports = true
filter_files = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
