[tool.poetry]
name = "TokenDetectionAPI"
version = "1.0.1"
description = "An API developed to detect discord bot tokens in a given image. Built using FastAPI framework."
authors = ["KortaPo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
PyYAML = "^6.0"
loguru = "^0.5.3"
numpy = "^1.22.1"
fastapi-limiter = {git = "https://github.com/long2ice/fastapi-limiter.git"}
pytesseract = "^0.3.8"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
uvloop = "^0.16.0"
aiohttp = {extras = ["speed"], version = "^3.8.1"}


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pyright = "^1.1.234"
pdoc3 = "^0.10.0"
black = "22.3.0"

[tool.isort]
profile = "black"
py_version = 38
line_length = 100
combine_as_imports = true
filter_files = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
